Fixed add album and some testing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,4 +60,6 @@ en:
       add_album: Add Album
       edit: Edit
       back: Back
+
+    albums:
       successful_create: 'Album was successfully created.'
